fixes for header on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,7 +48,7 @@ main {
 	width: 720px;
 	max-width: calc(100% - 2em);
 	margin: auto;
-	padding: calc(78px + 1em) 3em 1em 3em;
+	padding: 1em 3em 1em 3em;
 }
 h1,
 h2,
